deployment/company-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: company
  labels:
    app: company
spec:
  replicas: 1
  selector:
    matchLabels:
      app: company
  template:
    metadata:
      labels:
        app: company
    spec:
      containers:
        - name: company
          image: somkiat/company-service
          ports:
            - containerPort: 8080
