deployment/department-service.yml
apiVersion: v1
kind: Service
metadata:
  name: department
  labels:
    app: department
spec:
  type: NodePort
  ports:
    - name: department-http
      port: 8080
      targetPort: 8080
      nodePort: 32000
      protocol: TCP
  selector:
    app: department
