deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    http:
      paths:
      - path: /department/*
        backend:
          serviceName: department
          servicePort: 8080
      - path: /company/*
        backend:
          serviceName: company
          servicePort: 8080
